# blog_os

./: .gitignore  .rust-project.json  Cargo.toml  README.md  notes.excalidraw  output.txt  rust-toolchain.toml  x86_64-blog_os.json
.cargo/: config.toml
.github/workflows/: build.yml  test.yml
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  scanc.rs  serial.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
src/fs/: block_dev.rs  block_handler.rs  block_repr.rs  disk_handler.rs  layout.rs  mod.rs  simple_fs.rs
src/storage/: block_repr.rs  mod.rs
src/task/: executor.rs  keyboard.rs  lock.rs  mod.rs  pinh.rs  simple_executor.rs
src/virtio/: mod.rs  pci.rs
temp/: hello.ll  hello.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
