[package]
name = "blog_os"
version = "0.1.0"
authors = ["zen-zap"]
edition = "2018"

[dependencies]
bootloader = {version = "0.9", features=["map_physical_memory"]}
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
# iobase tell us the port address and iosize tells us the port size .. 0xf4 is a generally unused port on the x86 IO bus
test-success-exit-code = 33  # (0x10 << 1) | 1
